delete news added

--- a/src/assets/global.scss
+++ b/src/assets/global.scss
@@ -17,3 +17,9 @@ li {
 .p-panelmenu .p-panelmenu-panel .p-panelmenu-content {
   padding: 10px;
 }
+.list-img{
+  width: 100%;
+}
+.list-card{
+  width: 30%;
+}
