--- a/src/assets/global.scss
+++ b/src/assets/global.scss
@@ -32,3 +32,9 @@ li {
 .controls {
   @include flex(row, start, center);
 }
+
+.position-right{
+  display: flex;
+  justify-content: flex-end;
+  margin-bottom: 20px;
+}
